# ai_avartar

./: .bash_aliases  .gitignore  .pre-commit-config.yaml  AWS_TIPS  Makefile  README.md  ecosystem.config.js  how_to_migrate_from_tg_to_src.md  pyproject.toml  requirements.txt  yudun_deploy_README.md
c101/: c101_run_st.py  c101binance.py  c101cmc.py  c101format.py  c101functions.py  c101operation.py  c101streamlit.py  c101variables.py  chatgpt_bot.py
c101/my_config/: my_variables.py  st_config.yaml
c101/shells/: .bash_aliases  daily_operation_11pm.sh  db_auto_back.sh  db_auto_restore.sh  dl_new_ai_article_audio.sh  (+2 more)
fanbook/: c101fanbook.py
mac_task/: auto_deploy.py  auto_upload.py  chat_pdf.py  client_secrets.json  create_image.py  create_leovoice.py  create_story.py  create_subtitle.py  create_video.py  create_wav.py  discord_lgg.py  lang_chain.py  lib_upgrade.sh  main.py  mv_by_ratio.py  my_config.py  remote_restart.sh  requirements.txt  rsync_cab_code.sh  rsync_code.sh  rsync_lh_code.sh  rsync_lw_code.sh  rsync_tb_code.sh  rsync_wc_code.sh  stability_ai.py  try_bark.py
monitoring/: README.md  fanbook_bot_monitor.py  prometheus.yml
src/: .env.template  bot_init.py  src_bot_init.py
tests/: demo_test.py
tg/: .bash_aliases  .env.avatar  ama_loader.py  auto_conda.sh  auto_local_dev.sh  auto_mysql.sh  auto_nginx.sh  auto_node.sh  bot_init.py  creater_bot.py  deposit_withdraw_check.py  ding-dong-bot.py  hot_coin_check.py  local_bot.py  logging_util.py  prompt_template.py  requirements.txt  test_inlocal.py  tg_binance.py  transfer_usdt_to_main.py  tvariables.py
(+295 files in other folders)
